--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     
+    <!--META TAG OG-->
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Vinicius Burguer - O melhor hamburguer da cidade!"/>
+    <meta property="og:image" content="https://cardapio-three-blush.vercel.app/assets/hamb-1.png"/>
+    <meta property="og:description" content="Esse é o melhor hamburguer caseiro da cidade"/>
+    <meta property="og:site_name" content="Vinicius Burger"/>
 
     <link rel="stylesheet" href="./styles/output.css">
+
     <title>Vinicius Burger</title>
 </head>
 <body>
