--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
             <div class="flex items-center justify-between mt-5 w-full">
                 <button id="close-modal-btn">Fechar</button>
-                <button id="checkout-btn" class="bg-green-500 text-white px-4 py-1">Finalizar pedido</button>
+                <button id="checkout-btn" class="bg-green-500 text-white px-4 py-1 rounded-lg">Finalizar pedido</button>
             </div>
 
         </div>
